force-app/main/default/objects/JiraConnectorSettings__c/JiraConnectorSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>JiraConnectorSettings</label>
</CustomObject>