force-app/main/default/objects/JiraConnectorSettings__c/fields/DestinationEnvironment__c.field-meta.xml
<CustomField>
    <fullName>DestinationEnvironment__c</fullName>
    <label>DestinationEnvironment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>