force-app/main/default/objects/JiraConnectorSettings__c/fields/ProjectKey__c.field-meta.xml
<CustomField>
    <fullName>ProjectKey__c</fullName>
    <label>ProjectKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>