force-app/main/default/objects/JiraConnectorSettings__c/fields/TriggerLogicFlag__c.field-meta.xml
<CustomField>
    <fullName>TriggerLogicFlag__c</fullName>
    <defaultValue>true</defaultValue>
    <label>TriggerLogicFlag</label>
    <type>Checkbox</type>
</CustomField>